<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".info_main"
    android:background="@drawable/papyrus"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="76dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/foodlogo"
        android:layout_marginTop="20sp"/>


    <TextView
        android:id="@+id/textViewText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="ABOUT FOOD RESCUE"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        android:text="@string/form"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/form1"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/form3"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form4"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form5"
        android:textAlignment="center"
        android:textSize="20sp" />


</LinearLayout>